Update new fix of text.md